Thu Jul 23 15:04:20 2009  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/irb.rb, lib/irb/init.rb, lib/irb/ext/save-history.rb: add
	  IRB::irb_at_exit. no use finalizer saving history. [ruby-dev-38563]

Tue Jul 21 20:26:35 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.status): remove the definition of CP, so
	  Makefiles of exts will use ``-run -e cp'' instead of copy command.

Tue Jul 21 19:34:56 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_flush): fsync() after buffer is flushed on win32.
	  backported from trunk.  [ruby-core:20043]


Sun Jul 19 14:03:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DEPRECATED): backported from trunk.

	* eval.c (rb_mod_autoload): should use SafeStringValue() instead
	  obsolete Check_SafeStr().

	* ruby.h (rb_check_safe_str, rb_str2cstr): deprecation warning.

Sat Jul 18 12:05:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.h (RFLOAT_VALUE, RSTRING_END, RREGEXP_SRC_*, RBIGNUM_*):
	  backported macros for compatiblity from trunk.

	* re.h (RMATCH_REGS): added for compatibility.

Sat Jul 18 07:56:00 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: fail to create a widget object for an unknown
	  wiget path. 

Sat Jul 18 07:06:31 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb,ext/tk/lib/tk/grid.rb: Bug fix on grid_slaves().
	  Extend usage pattern of grid_column()/grid_row().

Thu Jul 16 23:32:16 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb,ext/tk/config_list.in: ignore paths which includes
	  white space characters on Windows.[ruby-dev:38794]

	* ext/tk/lib/tk.rb: works on Cygwin (limitation:: Tk.mainloop works on
	  the main thread only).

Wed Jul 15 06:21:50 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: --with-{tcl,tk}-dir doesn't work.[ruby-dev:38782]

Tue Jul 14 09:26:14 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
